WAL: Context memory compaction snapshot (RUN 65)
* Captures current state: 538 tests, 60 RUNs delivered.
* GPU ONNX inference VERIFIED at 15.40x speedup.
* All major breakthroughs, pending tasks, blocked items preserved.