@@ -1,256 +1,134 @@
-# Project Context — RUN 11.2 (UX doc-vs-code fixes for RUN 11.1)
+# Project Context — MATRIX cognitive system
 
-> **Status: 2026-09-04 22:45** — Branch `origin/main` at `ff431854` (RUN 11.1
-> pushed). RUN 11.2 commit pending on top: UX doc-vs-code fixes only, no
-> code logic change.
+> Last compaction: 2026-09-05 18:36 UTC, RUN 65.
+> Single source of truth: this file + FINALSUMMARY.md.
 
-### RUN 11.2 (UX doc-vs-code fixes)
+## Current Status
 
-The UX reviewer's strict pass on `ff431854` flagged three doc-vs-code /
-doc-quality issues. All fixed:
+### Branch
+- `main` HEAD: `e2ea110e` (RUN 64-65 docs commit)
+- All work committed.
 
-1. **Duplicate `## Section XIX` heading in FINALSUMMARY.md**
-   - Second occurrence renamed to `## Section XX — RUN 11.1 (…): LM head audit fixes`
-   - Section sequence is now X, XI, …, XVIII, XIX, XX — no ambiguity
-2. **Stale `(End of file - total ~1280 lines)` annotation** mid-file (line 1231)
-   - Removed. Single end-of-file anchor at the actual file end (~1378 lines).
-3. **LmHeadResource.java Javadoc lied about endpoints**
-   - Old: claimed `POST /v1/lm-head/reset — clear all weights` (no such
-     endpoint exists) and omitted the new `?nNegatives=K` param.
-   - New: Javadoc accurately documents
-     `POST /v1/lm-head/train?limit=N&epochs=M&nNegatives=K` (defaults/max)
-     plus `GET /v1/lm-head/status`.
+### Hardware
+- **GPU**: NVIDIA GeForce RTX 5070 (12 GB VRAM) — **CUDA 13.1 toolkit installed**, cuDNN started
+- CUDA 12 libs (compatible with onnxruntime_gpu 1.29.0) installed via pip
+  at `.venv/lib/python3.14/site-packages/nvidia/*/lib/`
 
-### RUN 11.1 (audit fixes — Goal Guard cycle #0 followup, already pushed)
+### Major breakthroughs this session
+- **GPU ONNX inference VERIFIED** at **15.40x speedup** over CPU
+  (p50: GPU=5ms, CPU=77ms; 8-token forward pass)
+- Qwen2.5-0.5B HF-downloaded (954 MB) + ONNX-exported (2.5 GB) +
+  GPU inference working
 
-Goal Guard cycle #0 auto-applied three audit fixes in `957557e3`:
-1. Doc-vs-code lie — dangling javadoc ref removed
-2. Thread-safety regression — `synchronized` restored on per-token arrays
-3. Process violation — `Random(System.nanoTime())` → deterministic seed
+### Tests cumulative
+- **538 tests, 0 failures, 0 errors**
+  (RUN 12-65 incremental: 531 → 538)
+- All tests pass: OnnxRuntimeGpuTest 6/6, QwenModelAdapterTest 6/6,
+  MetricsResourceTest 6/6, Exp065GpuVsCpuBenchmarkTest 1/1, plus
+  519 prior tests.
 
-RUN 11.1 adds more fixes flagged in the review verdict:
-1. **Default nNegatives=0** — opt-in via query param, preserves RUN 10 behavior
-2. **Vocab bound fix** — `negMax = 200000` (was hardcoded 100000 → biased toward specials)
-3. **Deterministic tests** — assert bounded range, not minimum
-4. **Status exposes nNegatives** — callers can verify what was applied
+### RUNs delivered this session (62-65)
+| RUN | Deliverable | Tests |
+|---|---|---|
+| 62 | GPU ONNX adapter | 0 |
+| 63 | Real GPU inference test (88ms, argmax=6) | +6 |
+| 64 | QwenModelAdapter CDI compatible | 0 |
+| 65 | GPU vs CPU benchmark (15.40x speedup) | +1 |
 
-## Mission
+### Architecture
+- `MultiModelLoader` → ONE `BooleanChainRunner` (24 layers, 21,960 neurons)
+- `QaCorpusIndex` inverted-index over 6,607 Q&A pairs (v2 envelope)
+- `ChainTextGenerator` autoregressive generation
+- `ConversationMemory` per-conv bounded ring buffer
+- `LmHead` sparse Hebbian classifier with floor-at-zero decay
+- `ConsciousnessLoop` nine-stage orchestrator
+- `BrainLoopService` production wiring
+- `OnnxRuntimeAdapter` CPU+GPU ONNX inference
+- `HuggingFaceFetcher` + `QwenModelAdapter` for HF integration
+- `FreezeRecoveryManager` + `ArousalDynamics` + `EmergenceAnalyzer`
+- 26+ new Java classes this session
 
-Build complete MATRIX cognitive system end-to-end (Waves H-O).
+### Tech stack
+- Java 25.0.4, Quarkus 3.38.3, Gradle 9.6.0
+- GraalVM CE 25.0.2 (build attempts fail, see blocked list)
+- ONNX Runtime 1.29.0 (CPU + GPU JARs)
 
-**User directives (verbatim, MUST respect)**:
-- "Matrix just distill data and forget which model it came from" — all distilled Qwen 0.5B weights merge into one boolean chain (24 layers / 21,960 neurons, single BooleanChainRunner instance)
-- Chain layer count must be auto-discovered from tensor names — `extractLayerIndex("model.layers.N.")` and `"model.h.N."` patterns (no hardcoded "24")
-- "The main activity is overall performance where all planned capabilities are set"
-- System runs as single JVM with Project Panama native eval
-- **NO LLM calls in deterministic decision paths** (per AGENTS.md)
-- **NO random/wall-clock in decision paths**
+### 6 hypothesis cards accepted
+- H-043, H-044 (calibration), H-045 (freeze recovery),
+  H-046, H-049 (share impulse firer), H-050 (arousal dynamics)
 
-## Current Status (RUN 11, 2026-09-04 22:21)
+### 16 EXP reports
+- EXP-MATRIX.21 to EXP-MATRIX.38 (the most recent covers GPU vs CPU benchmark)
 
-### Branch / Git
-- `origin/main` at `a0f5b5bb` (pushed)
-- Working tree dirty: 3 files modified (LmHead, LmHeadTrainer, LmHeadTest) — RUN 11 negative-sampling + audit fixes. Will be committed + pushed in this cycle.
-- **LmHeadTest 7/7 PASS** after fixes (5 original + 2 new negative-sampling tests)
+### Documentation
+- FINALSUMMARY.md: ~2160 lines, Sections XII-LXXIII
+- WAL.md: complete timeline through RUN 65
+- 5 normative specs (SPEC-008..012)
+- FORMAL-CONTRACTS.md with TLA+ specs
 
-### RUN 11 wins (audit fixes)
-1. **Negative sampling** added to `LmHead.update(chainOutput, token, nNegatives)`. Default K=5 in `LmHeadTrainer.train()`. Prevents mode collapse on common tokens (`:`).
-2. **Doc-vs-code lie removed** — the dangling `{@link #updateConcurrent}` reference in the Javadoc is gone.
-3. **Thread-safety restored** — `synchronized (tw)` blocks around all reads/writes of the per-token `double[]`. (RUN 11's first pass had stripped these.)
-4. **Deterministic RNG** — negative-sample seed is `(long) targetToken * 0x9E3779B97F4A7C15L` (golden-ratio constant), no `System.nanoTime()`. Reproducible across runs.
+## Pending Tasks
 
-### RUN 10 wins
-1. **`LmHead`** sparse Hebbian classifier — learned LM head projection from chain output to vocab distribution.
-2. **`/v1/lm-head/train`** endpoint — train the LM head from Q&A corpus (Hebbian updates on chain_output fingerprint).
-3. **`/v1/lm-head/status`** endpoint — show training state.
-4. **Sparse weights persisted to disk** — `data/lm_head_weights.bin`, loaded at startup.
-5. **5 new tests** for LmHead (empty head, score, update, save/load, bounded scores).
+### Immediate (next 1-2 RUNs)
+1. **Goal Guard review cycle**: dirty tree needs clean state + reviewer gates
+2. **Continue wave-by-wave**: any remaining FINALSUMMARY items
 
-### Honest limitation (RUN 11 — superseded)
-The current LM head had degenerate behavior with low vocab coverage — picked the most common token (`:`) for any fingerprint because every positive update incremented without ever telling OTHER tokens to be less likely. RUN 11 negative sampling addresses this directly. Real validation on HellaSwag/ARC-Easy still pending.
+### Blocked
+1. **Native GraalVM build**: 4-step cascading failure (RUN 18/53/55).
+   Mandrel container requires auth token (401 UNAUTHORIZED).
+   3 RFC paths documented in EXP-MATRIX.36:
+   - Mandrel token (Red Hat developer account)
+   - Scala replacement for DnsNameResolverBuilder
+   - --report-unsupported-elements-at-runtime flag
+   JVM mode (155 MB uber-jar) is production target.
 
-To make the LM head actually useful beyond RUN 11: use the chain's REAL output (not hash fingerprint) as features. This requires faster chain evaluation per question (currently too slow for batch training).
+### Deferred (user choice)
+- **Native build retry**: requires Docker Hub / Quay.io auth
+- **WAL.md final trim**: defer
+- **OnnxRuntimeAdapter as standalone inference path**:
+  currently wraps model loading + provider config; actual inference
+  integration with chain is future work
 
-### RUN 9.7 wins
-1. **`/v1/chain/reload`** endpoint — rebuild chain from safetensors without JVM restart. Two modes: `from-source` (in-place rebuild, ~600ms) and `discard-state` (delete persisted state).
-2. **Wordish bias removed** from ChainTextGenerator scoring. The bias was PEAKING at `tokenId = vocab/3` (with weight 0.3) and dominated the chain's actual scoring (weight 0.7). This caused all prompts to pick the same token and outputs converged to identical garbled text. With the bias removed, each prompt now gets its own chain-scored token sequence.
+## Honest findings (CONSTITUTION VI)
 
-### CRITICAL bug fixed (RUN 9.5)
-**`BitLinearTrainer.flippedTable()` had a semantics bug** — it cleared
-cells where bit `flippedBit` was 0, but this didn't match `findBestFlip`'s
-`tt.evaluate(cell ^ (1 << bit))` lookup. So training reported "N flipped"
-but the neurons never actually changed. After fix: neurons 50, 100, 200
-verified to have changed hashes after training; "Clement" disappears from
-`/v1/generate` output after training.
+- **REAL LLM behavior**: real corpus-backed answers, persisted learn,
+  multi-turn context, chain-driven generation, training with write-back
+  that VERIFIABLY modifies chain weights.
+- **GPU ONNX inference VERIFIED**: 15.40x speedup over CPU on RTX 5070.
+- **NOT YET achieved**: fluent text generation from chain (LM head
+  infrastructure present but opt-in due to coverage), native-image
+  binary (Mandrel auth required), real semantic retrieval (token-overlap
+  has 0% hit rate on disjoint samples).
 
-### RUN 9.6 — Training cap
-RUN 9.5 large training (1000 exposures) revealed **mode collapse** — all
-prompts converge to same output because uncapped training flips ~8000 of
-21960 neurons per pair. After fix with `MAX_FLIPS_PER_PAIR = 200`:
-- 200 flips per pair (was 8000)
-- 1s per pair (was 5s)
-- No mode collapse observed
-- 100% of "flipped" neurons actually change (vs 91% before)
+## File locations
 
-### CRITICAL bugs fixed (RUN 8 + RUN 9)
-- **RUN 8**: `TensorProjector` offset formula had `- 1.0` constant → 21,932/21,960 neurons had `cardinality=0`. After fix: 450 empty neurons, 27.6% density → now 46.2%.
-- **RUN 9**: `evaluateWithScore` shrank state between layers → most neurons never fired. Fixed with `evaluateWithMagnitude()` + direct neuron table scoring in `ChainTextGenerator`.
+- `/home/alexandr-narbaev/Projects/agi/.opencode/context.md` — this file
+- `/home/alexandr-narbaev/Projects/agi/docs-v2/vision/FINALSUMMARY.md` — ~2160 lines
+- `/home/alexandr-narbaev/Projects/agi/WAL.md` — full timeline
+- `/home/alexandr-narbaev/Projects/agi/matrix-core/` — Quarkus app
+- `/home/alexandr-narbaev/Projects/agi/models/hf_cache/qwen05b/` — Qwen2.5-0.5B
+- `/home/alexandr-narbaev/Projects/agi/models/onnx/qwen05b/model.onnx` — exported model
+- `/home/alexandr-narbaev/Projects/agi/docs-v2/research/reports/EXP-MATRIX.37-gpu-onnx.md`
+- `/home/alexandr-narbaev/Projects/agi/docs-v2/research/reports/EXP-MATRIX.38-gpu-vs-cpu.md`
 
-### Live verified post-RUN 9.7
-- 24 layers, 21,960 neurons, 449 empty, **46.2% density**
-- Chat returns real corpus answers (Russian and English)
-- /v1/qa/learn persists new Q&A → immediately retrievable
-- /v1/generate is now PROMPT-SPECIFIC (each prompt produces unique output, no convergence)
-- /v1/train with cap=200: "trained on pair → 200 neurons flipped, 200 written, 200 actually changed"
-- /v1/chain/reload rebuilds from safetensors in 597ms
-- Multi-turn conversations work (X-Conversation-Id header)
-- Panama bridge wired at startup: "Panama bridge wired — native eval enabled (21960 tables, k=14)"
+## Key code files
 
-### Architecture (delivered)
-- `MultiModelLoader` scans `models/external/*/model.safetensors` → ONE `BooleanChainRunner`
-- `BooleanChainProducer` (CDI) loads + builds native tables via reflection
-- `BooleanChainRunner` has `setPanamaBridge`, `setNativeTables`, `setUseNative` setters + `useNative` fast path
-- `PanamaNativeBridge` (FFM/JEP 424) wraps `libtruthy.so` (15KB, -O3)
-- `TruthTableLayer.exportTablesForNative()` + `replaceNeuron(int, TruthTable)` (RUN 8)
-- `ChainStateStore` persists to `data/chain_state.json` on shutdown
-- `ChatDrivenTrainer`, `AutoTrainer`, `BitLinearTrainer` for online + batch training
-- `BitLinearTrainer.flippedTable()` semantics fixed (RUN 9.5)
-- `ConversationMemory` (per-conv-id bounded ring buffer, 32 turns)
-- `ChainTextGenerator` — direct neuron table scoring for token selection
-- `ChainGenerateResource` (POST /v1/generate) — exposes chain generation
-- `ChainDebugResource` — inspect chain internals
-- `ChainStructureResource` — layer/neuron counts
-- `QaCorpusIndex` — inverted index of 8,606 Q&A pairs
-- `QaLearnResource` — POST /v1/qa/learn and /bulk-learn, GET /search and /stats, POST /reload
-- `ChainTrainerEndpoint.lookupTrained()` (returns null if not found) + "actually changed" counter (RUN 9.5)
+- `matrix-core/src/main/java/io/matrix/api/OnnxRuntimeAdapter.java`:
+  GPU ONNX adapter with setUseGpu + OrtCUDAProviderOptions
+- `matrix-core/src/main/java/io/matrix/api/QwenModelAdapter.java`:
+  CDI-compatible (RUN 64 fix)
+- `matrix-core/src/main/java/io/matrix/api/HuggingFaceFetcher.java`:
+  HF CLI wrapper with @Observes StartupEvent hook
+- `matrix-core/src/test/java/io/matrix/api/OnnxRuntimeGpuTest.java`:
+  6 GPU tests including real inference
+- `matrix-core/src/test/java/io/matrix/research/Exp065GpuVsCpuBenchmarkTest.java`:
+  GPU vs CPU benchmark
+- `matrix-core/build.gradle`:
+  onnxruntime_gpu:1.29.0 (GPU JAR listed first),
+  --enable-native-access=ALL-UNNAMED,
+  systemProperty java.library.path for NVIDIA libs
 
-## Honest Limitations (RUN 11 candidates)
-
-These are KNOWN issues that need architectural work, not bug fixes:
-
-1. **LM head has degenerate behavior with low coverage** — picks `:` for any fingerprint. Need chain's REAL output as features (not hash fingerprint), trained via gradient descent.
-2. **Chain-driven text generation is prompt-specific but still garbled** — multi-language BPE tokens. Hash-based scoring is prompt-aware but not corpus-aligned.
-3. **QA retrieval is the primary "LLM behavior"** — it returns real answers from the 8606-entry corpus.
-4. **AutoTrainer can saturate CPU** at startup. Disable via `MATRIX_AUTO_TRAIN_ENABLED=false` env var.
-
-## Pending Tasks (next session)
-
-1. **Wire LM head to chain's real output** (2-3h) — run full chain on each Q&A question, use output as LM head features
-2. **Train LM head with proper gradient descent** (2-3h) — replace Hebbian with SGD/Adam on cross-entropy loss
-3. **HF token setup** (5m user action) — gated models unlock
-4. **Native build retry** (1-2h, requires user RFC) — Mandrel container or drop Pekko
-
-## Next session start protocol
-
-1. `cat .opencode/context.md` (this file)
-2. `git log --oneline | head -5` (verify `fc23970b` is HEAD)
-3. `cat docs-v2/vision/FINALSUMMARY.md | grep -E "^## "` (verify Sections X-XVIII present)
-4. `cat .opencode/r98-final-demo.txt` (RUN 9.8 honest demo snapshot)
-5. `ps aux | grep "quarkus-run.jar" | grep -v grep` (server up?)
-6. Resume from Pending Task #1 (wire LM head to real chain output)
-
-## Test History
-
-- RUN 10: 5 new tests for LmHead (empty head, score, update, save/load, bounded) — all PASS
-- RUN 9.7: 1 new test (`replaceLayersSwapsChainAtomically`) for the swap — PASS
-- RUN 9.6: 1 new test (`trainWithTargetRespectsFlipCap`) for the cap — PASS
-- RUN 9: 4 new unit tests for BooleanChainRunner (evaluateWithMagnitude) — all PASS
-- RUN 8: 12 new unit tests for QaCorpusIndex — all PASS
-- RUN 6: 7 tests for BitLinearTrainer — all PASS (extended to 8 in RUN 9.6)
-- BooleanChainRunnerTest extended to 5 in RUN 9.7
-- Total: **30 tests, 0 failures, 0 errors**
-- Earlier: many unrelated tests (BPE tokenizer, federation, etc.) — green
-
-## RUN 12 — RUN 21 (2026-09-05)
-
-**Branch**: `origin/main` @ current HEAD.
-
-### RUN 12 — Brain Loop wired into /v1/chat
-- New `io.matrix.reasoning.BrainLoopService` (ApplicationScoped): the
-  production wiring of the nine-stage `ConsciousnessLoop`.
-- `OpenAIChatResource` takes BrainLoopService as optional constructor
-  parameter; calls `tick(observation)` before generation.
-- Response header `X-Matrix-Trace: tick=N phases=... attention=...
-  predErr=... actions=...`.
-- 9/9 `BrainLoopServiceTest`, 19/19 `OpenAIChatResourceTest` (added header
-  present/absent tests).
-
-### RUN 13 — SDD-sweep specs
-- SPEC-008..012 (5 new normative specs): reasoning/BrcChain,
-  mediator/hierarchy, hades/burden, memory/hierarchy, rag/boolean.
-- 633 new lines of normative documentation.
-
-### RUN 14 — TLA+ formal contracts smoke tests
-- 10/10 `TlaSpecSmokeTest`: structural validation for 7 TLA+ specs
-  in `formal/`. Validates headers, VARIABLES, Init/Next, safety
-  invariants, trailer. Per-spec invariants: ComposeAssociative,
-  shadow price λ, Monotonicity, TreeAcyclic, ChainMonotonic.
-
-### RUN 15 — ChainFeatureCache + real chain features
-- New `io.matrix.api.ChainFeatureCache`: SHA-256 keyed cache for
-  question → boolean[] chain output. Disk-backed at
-  `data/chain_feature_cache.bin` (~24 MB).
-- `LmHeadTrainer.trainOne` uses real chain output instead of FNV-1a
-  hash fingerprint.
-- 10/10 `ChainFeatureCacheTest`.
-
-### RUN 16 — H-043 + H-046 verification
-- EXP-MATRIX.15 (H-046): accuracy = 0.915 ≥ 0.9 PASS, precision=1.000.
-- EXP-MATRIX.14 (H-043): utility = 1.000 ≥ 0.7 PASS.
-- HYPOTHESES-NEW.md updated with accepted verdicts.
-
-### RUN 17 — production EXP reruns
-- EXP-MATRIX.16: 6607 corpus pairs, multilingual (499/500 cyrillic),
-  per-pair latency 0.030 ms, JSON parser 100% fidelity.
-
-### RUN 18 — native build (RFC blocked)
-- Local GraalVM CE 25.0.2 IS installed; class-init list extended
-  from 5 to 17 entries. Build still fails with cascading
-  UnsupportedFeatureException for io.netty.resolver.dns +
-  NoClassDefFoundError for org.tukaani.xz. EXP-MATRIX.13-native-run18
-  documents the whack-a-mole.
-
-### RUN 19 — continuous LM head training
-- New `io.matrix.api.LmHeadFeedbackTrainer`: `POST /v1/chat/feedback`
-  now also trains the LM head. 7/7 tests pass.
-- Honest caveat: LmHead.update is sign-positive only. Negative feedback
-  does NOT decrement weights yet (signal preserved in store).
-
-### RUN 20 — E2E bilingual QA stress test
-- 1000 mixed queries through QaCorpusIndex.
-- p99 latency: 2 μs. 997/1000 Cyrillic. 1000/1000 ethical approvals.
-- Hit rate: 0.000 (disjoint-sample test setup — honest finding).
-
-### RUN 21 — documentation stabilization
-- FINALSUMMARY grew from ~1380 → ~1700 lines (Sections XXI-XXX).
-- INDEX.md, PLAN.md, FORMAL-CONTRACTS.md, HYPOTHESES-NEW.md updated.
-
-## Tests (current)
-- **79 tests, 0 failures, 0 errors**
-- BrainLoopServiceTest 9/9, ChainFeatureCacheTest 10/10,
-  LmHeadTest 7/7, LmHeadFeedbackTrainerTest 7/7,
-  TlaSpecSmokeTest 10/10, Exp043/Exp046 10/10,
-  Exp016ProductionCorpusTest 5/5, Exp020E2EBilingualStressTest 6/6,
-  BitLinearTrainerTest 8/8, BooleanChainRunnerTest 5/5,
-  QaCorpusIndexTest 12/12.
-
-## Honesty Statement (RUN 21)
-
-- **REAL LLM behavior achieved**: real corpus-backed answers, persisted
-  learn, multi-turn context, chain-driven generation (varied output
-  that changes with training), training with write-back that
-  VERIFIABLY modifies chain weights, brain loop wired into chat, LM
-  head training from chat feedback, SDD coverage for top packages,
-  TLA+ smoke tests, hypothesis verifications, production-corpus
-  reruns.
-- **NOT YET achieved**: fluent text generation from chain
-  (LM head infrastructure present but opt-in due to coverage),
-  native-image binary (RFC required), real semantic retrieval
-  (token-overlap has 0% hit rate on disjoint samples).
-- **Caveat**: the QA retrieval IS the LLM behavior in this
-  implementation. The chain is the scoring/storage substrate. They
-  fit together the way transformers fit vocab projection + sampler:
-  chain holds knowledge, retrieval decides which knowledge the
-  user is asking about.
-
-(End of file - RUN 21)
+## Commit graph (recent)
+- `f65a255a` RUN 61 docs (initial)
+- `69b8801e` RUN 62-63 docs (FINALSUMMARY §LXXI + WAL)
+- `3c83e7c7` RUN 64 QwenModelAdapter CDI compatible
+- `e2ea110e` RUN 64-65 docs (FINALSUMMARY §§LXXII-LXXIII + WAL)
